# dash-template

./: .gitignore  README.md  pyproject.toml
src/: app.py
src/callbacks/: homepage.py  initial_load.py
src/components/: ChartContainer.py  Footer.py  Header.py  NavMenu.py  __init__.py
src/pages/: a_third_page.py  homepage.py  other_page.py
src/theme/: theme.py
